syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Getaway.Core.Contracts.Comments";

package comments;

service Comments {
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentReply);
  rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentReply);
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentReply);
  rpc GetAllCommentsByTask (GetAllCommentsByTaskRequest) returns (GetAllCommentsByTaskReply);
}

message CreateCommentRequest {
  string creator_id = 1;
  string task_id = 2;
  string text = 3;
}

message CreateCommentReply {
  int32 comment_id = 1;
}


message UpdateCommentRequest {
  int32 comment_id = 1;
  string text = 2;
  string creator_id = 3;
}

message UpdateCommentReply {
  int32 comment_id = 1;
}



message DeleteCommentRequest {
  int32 comment_id = 1;
}

message DeleteCommentReply {
  int32 comment_id = 1;
}



message GetAllCommentsByTaskRequest {
  string task_id = 1;
}

message GetAllCommentsByTaskReply {
  repeated CommentInfo comments = 1;
}



message CommentInfo{
  int32 comment_id = 1;
  string creator_id = 2;
  string task_id = 3;
  string text = 4;
  google.protobuf.Timestamp date_created = 5;
}
